Sun Feb 13 23:54:25 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From Lothar Werzinger <lothar at xcerla dot com>
	* apps/svcconf/Svcconf_Handler.cpp:

	  Enhanced error messages.

Wed Jan  5 14:08:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * common/DefaultHandler.{h,cpp,i}:
        * common/NamespaceSupport.{h,cpp,i}:
        * common/Transcode.{h,cpp,i}:
        * examples/SAXPrint/Print_Handler.{cpp,i}:
          Removed .i file and updated h/cpp file

        * common/Makefile.am:
          Updated

Tue Aug 17 19:07:11 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* common/NamespaceSupport.cpp:

	  Changed ACE_NEW_RETURN to use "NS_Node_T" instead of "struct
	  NS_Node_T" --- the latter triggers a gcc 3.3 parser bug when
	  used with the "new (std::nothrow)" version of ACE_NEW_RETURN.
	  Fortunately, the "struct" is unnecessary.

Sat Feb 21 23:51:25 2004  .  <.@isis.vanderbilt.edu>

        * common/Exception.h:
        * common/Exception.cpp:
        * common/SAXExceptions.h:
        * common/SAXExceptions.cpp:

          Fixed a few bugs in the way the exceptions were set-up in the
          case when exceptions=0. Provided implementations for operator
          assignment and duplicate(). This should fix problems with
          throwing and catching exceptions when exceptions=0.

Sat Jan 31 20:06:57 2004  Krishnakumar B  <kitty@cse.wustl.edu>

        * parser/parser/Parser.cpp (parse_PE_reference): Added ACE_TEXT
          to satisfy WCHAR windows builds. Thanks to Johnny for reporting
          these errors.

Fri Jan 30 16:04:43 2004  Krishnakumar B  <kitty@cse.wustl.edu>

        * parser/parser/Parser.cpp: Rewrote a simple string manipulation
          involving ACE_String_Base<char>::operator +() to use const char*
          instead of char, so that we don't need an explicit template
          instantiation for it.

        * examples/SAXPrint/main.cpp: Added missing explicit template