@@ -2,8 +2,6 @@
 
 #include "ACEXML/parser/parser/Entity_Manager.h"
 
-static const ACEXML_Char empty_string[] = { 0 };
-
 #if !defined (__ACEXML_INLINE__)
 # include "ACEXML/parser/parser/Entity_Manager.i"
 #endif /* __ACEXML_INLINE__ */
