@@ -1,3 +1,11 @@
+Mon Apr 18 14:10:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * parser/parser/Entity_Manager.cpp:
+          Removed not uses static const
+
+        * parser/parser/Entity_Manager.i:
+          Initialise pointer with 0
+
 Sun Feb 13 23:54:25 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	From Lothar Werzinger <lothar at xcerla dot com>
